Update scheduled workflow branch to add-group-library-support

--- a/.github/workflows/daily_watch.yml
+++ b/.github/workflows/daily_watch.yml
@@ -5,7 +5,7 @@ on:
     - cron: "5 22 * * *"  #北京时间6点05运行
   push:
     branches:
-      - main
+      - copilot/add-group-library-support
   workflow_dispatch:
 
 jobs:
