Disable scheduled trigger in daily_watch.yml
Comment out the scheduled cron job for the workflow.

--- a/.github/workflows/daily_watch.yml
+++ b/.github/workflows/daily_watch.yml
@@ -1,8 +1,8 @@
 name: Daily Watch & RSS
 
 on:
-  schedule:
-    - cron: "5 22 * * *"  #北京时间6点05运行
+  # schedule:
+  #   - cron: "5 22 * * *"  #北京时间6点05运行
   push:
     branches:
       - copilot/add-group-library-support
